Making libs pretty

--- a/iviz_roslib/iviz_roslib.csproj
+++ b/iviz_roslib/iviz_roslib.csproj
@@ -22,4 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="POCOs\" />
+  </ItemGroup>
 </Project>
