--- a/iviz_kinect/packages.config
+++ b/iviz_kinect/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="Microsoft.Kinect" version="2.0.1410.19000" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="OpenCvSharp4" version="4.3.0.20200421" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.3.0.20200421" targetFramework="net48" />
+  <package id="OpenCvSharp4.Windows" version="4.3.0.20200421" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
 </packages>
