--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -12,6 +12,8 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.arfoundation": "3.1.3",
     "com.unity.xr.arkit": "3.0.4",
+    "com.unity.xr.oculus.standalone": "2.38.4",
+    "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
