--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -10,8 +10,9 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arfoundation": "3.1.3",
-    "com.unity.xr.arkit": "3.0.4",
+    "com.unity.xr.arcore": "4.0.3",
+    "com.unity.xr.arfoundation": "4.0.2",
+    "com.unity.xr.arkit": "4.0.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
