--- a/iviz_model_service/iviz_model_service.csproj
+++ b/iviz_model_service/iviz_model_service.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>iviz_loader</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
