--- a/iviz_msgs/iviz_msgs.csproj
+++ b/iviz_msgs/iviz_msgs.csproj
@@ -14,4 +14,7 @@
     <DebugType>full</DebugType>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ReSharper.Annotations" Version="7.1.3" />
+  </ItemGroup>
 </Project>
