--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -13,6 +13,8 @@
     "com.unity.xr.arcore": "4.0.3",
     "com.unity.xr.arfoundation": "4.0.2",
     "com.unity.xr.arkit": "4.0.1",
+    "com.unity.xr.oculus.standalone": "2.38.4",
+    "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
