Splitting model loader into library and app

--- a/iviz_model_service/iviz_model_service.csproj
+++ b/iviz_model_service/iviz_model_service.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>iviz_loader</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
     <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
     <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
     <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
