--- a/iviz_model_service/iviz_model_service.csproj
+++ b/iviz_model_service/iviz_model_service.csproj
@@ -3,7 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>iviz_loader</RootNamespace>
+    <RootNamespace>Iviz.ModelService</RootNamespace>
+    <AssemblyName>Iviz.ModelService.App</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
