--- a/iviz_model_service_lib/iviz_model_service_lib.csproj
+++ b/iviz_model_service_lib/iviz_model_service_lib.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <AssemblyName>Iviz.ModelService.Lib</AssemblyName>
+        <RootNamespace>Iviz.ModelService</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
