--- a/iviz_msgs/iviz_msgs.csproj
+++ b/iviz_msgs/iviz_msgs.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Iviz.Msgs</AssemblyName>
+    <RootNamespace>Iviz.Msgs</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
