--- a/iviz_urdf/iviz_urdf.csproj
+++ b/iviz_urdf/iviz_urdf.csproj
@@ -3,6 +3,8 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>8</LangVersion>
+        <AssemblyName>Iviz.Urdf</AssemblyName>
+        <RootNamespace>Iviz.Urdf</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
