--- a/iviz_roslib/iviz_roslib.csproj
+++ b/iviz_roslib/iviz_roslib.csproj
@@ -21,9 +21,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
+    <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="POCOs\" />
-    <Folder Include="XmlRpc\" />
   </ItemGroup>
 </Project>
