--- a/biggustave/biggustave.csproj
+++ b/biggustave/biggustave.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <AssemblyName>BigGustave</AssemblyName>
+        <RootNamespace>BigGustave</RootNamespace>
     </PropertyGroup>
 
 </Project>
