--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.burst": "1.3.1",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.collections": "0.9.0-preview.6",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.mathematics": "1.2.1",
