Changing lock to use struct

--- a/iviz_xmlrpc/iviz_xmlrpc.csproj
+++ b/iviz_xmlrpc/iviz_xmlrpc.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+    </ItemGroup>
+
 </Project>
