--- a/iviz_msgs_gen/iviz_msgs_gen.csproj
+++ b/iviz_msgs_gen/iviz_msgs_gen.csproj
@@ -15,4 +15,7 @@
     <None Remove="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Remove="Properties\PublishProfiles\FolderProfile 1.pubxml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
+  </ItemGroup>
 </Project>
