Making services generic

--- a/iviz_roslib/.gitignore
+++ b/iviz_roslib/.gitignore
@@ -234,7 +234,8 @@ DocProject/Help/Html2
 DocProject/Help/html
 
 # Click-Once directory
-publish/
+# (overriden! we want publish here)
+# publish/
 
 # Publish Web Output
 *.[Pp]ublish.xml
