--- a/biggustave/biggustave.csproj
+++ b/biggustave/biggustave.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
         <AssemblyName>BigGustave</AssemblyName>
         <RootNamespace>BigGustave</RootNamespace>
+        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
 </Project>
