Removed fastidious warnings about resource table

--- a/iviz_model_service/iviz_model_service.csproj
+++ b/iviz_model_service/iviz_model_service.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Iviz.ModelService</RootNamespace>
     <AssemblyName>Iviz.ModelService.App</AssemblyName>
     <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
