--- a/iviz_xmlrpc/iviz_xmlrpc.csproj
+++ b/iviz_xmlrpc/iviz_xmlrpc.csproj
@@ -5,6 +5,7 @@
         <AssemblyName>Iviz.XmlRpc</AssemblyName>
         <RootNamespace>Iviz.XmlRpc</RootNamespace>
         <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
