--- a/iviz_msgs_gen_lib/iviz_msgs_gen_lib.csproj
+++ b/iviz_msgs_gen_lib/iviz_msgs_gen_lib.csproj
@@ -4,7 +4,7 @@
         <LangVersion>8</LangVersion>
         <AssemblyName>Iviz.MsgsGen.Lib</AssemblyName>
         <RootNamespace>Iviz.MsgsGen</RootNamespace>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
