--- a/iviz_urdf/iviz_urdf.csproj
+++ b/iviz_urdf/iviz_urdf.csproj
@@ -4,7 +4,7 @@
         <LangVersion>8</LangVersion>
         <AssemblyName>Iviz.Urdf</AssemblyName>
         <RootNamespace>Iviz.Urdf</RootNamespace>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
         <Nullable>annotations</Nullable>
     </PropertyGroup>
 
