--- a/biggustave/biggustave.csproj
+++ b/biggustave/biggustave.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <AssemblyName>BigGustave</AssemblyName>
         <RootNamespace>BigGustave</RootNamespace>
-        <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
 </Project>
