--- a/iviz_rosmaster/iviz_rosmaster.csproj
+++ b/iviz_rosmaster/iviz_rosmaster.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
       <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
       <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
       <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
