--- a/iviz_msgs_gen_lib/iviz_msgs_gen_lib.csproj
+++ b/iviz_msgs_gen_lib/iviz_msgs_gen_lib.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>Iviz.MsgsGen.Lib</AssemblyName>
         <RootNamespace>Iviz.MsgsGen</RootNamespace>
         <Nullable>disable</Nullable>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
