--- a/iviz_republisher/iviz_republisher.csproj
+++ b/iviz_republisher/iviz_republisher.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
       <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
     </ItemGroup>
 
