--- a/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
+++ b/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
+      <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
       <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
     </ItemGroup>
 
