--- a/iviz_roslib/iviz_roslib.csproj
+++ b/iviz_roslib/iviz_roslib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>Iviz.Roslib</AssemblyName>
     <RootNamespace>Iviz.Roslib</RootNamespace>
-    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
