--- a/iviz_model_service/iviz_model_service.csproj
+++ b/iviz_model_service/iviz_model_service.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Iviz.ModelService</RootNamespace>
     <AssemblyName>Iviz.ModelService</AssemblyName>
     <LangVersion>8</LangVersion>
