--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -12,7 +12,7 @@
     "com.unity.textmeshpro": "2.1.3",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "4.1.1",
+    "com.unity.xr.arcore": "4.1.0-preview.2",
     "com.unity.xr.arfoundation": "4.1.1",
     "com.unity.xr.arkit": "4.1.1",
     "com.unity.xr.windowsmr.metro": "4.2.3",
