--- a/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
+++ b/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
@@ -4,7 +4,7 @@
         <AssemblyName>Iviz.Rosmaster.Lib</AssemblyName>
         <RootNamespace>Iviz.Rosmaster</RootNamespace>
         <LangVersion>8</LangVersion>
-        <TargetFrameworks>netstandard2.0;netcoreapp3.1;netcoreapp5.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
