--- a/iviz_model_service_lib/iviz_model_service_lib.csproj
+++ b/iviz_model_service_lib/iviz_model_service_lib.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
       <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
+      <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
     </ItemGroup>
 
     <ItemGroup>
