--- a/iviz_urdf/iviz_urdf.csproj
+++ b/iviz_urdf/iviz_urdf.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <LangVersion>8</LangVersion>
+        <LangVersion>9</LangVersion>
         <AssemblyName>Iviz.Urdf</AssemblyName>
         <RootNamespace>Iviz.Urdf</RootNamespace>
         <Nullable>annotations</Nullable>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
