--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -9,16 +9,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj"/>
-        <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj"/>
-        <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj"/>
-        <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj"/>
-        <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj"/>
+        <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
+        <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
+        <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
+        <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
+        <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
+        <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
     </ItemGroup>
 
     <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
         <ItemGroup>
-            <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))"/>
+            <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
         </ItemGroup>
     </Target>
 </Project>
