--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -1,20 +1,20 @@
 {
   "dependencies": {
-    "com.unity.burst": "1.3.9",
+    "com.unity.burst": "1.4.4",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.collections": "0.9.0-preview.6",
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.rider": "3.0.3",
+    "com.unity.ext.nunit": "1.0.6",
+    "com.unity.ide.rider": "3.0.4",
     "com.unity.mathematics": "1.2.1",
     "com.unity.nuget.newtonsoft-json": "2.0.0",
-    "com.unity.postprocessing": "2.3.0",
-    "com.unity.test-framework": "1.1.18",
+    "com.unity.postprocessing": "3.0.1",
+    "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "2.1.3",
     "com.unity.timeline": "1.2.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "4.1.0-preview.2",
-    "com.unity.xr.arfoundation": "4.1.1",
-    "com.unity.xr.arkit": "4.1.1",
+    "com.unity.xr.arcore": "4.1.5",
+    "com.unity.xr.arfoundation": "4.1.5",
+    "com.unity.xr.arkit": "4.1.5",
     "com.unity.xr.windowsmr.metro": "4.2.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
