Switching Task to ValueTask

--- a/iviz_xmlrpc/iviz_xmlrpc.csproj
+++ b/iviz_xmlrpc/iviz_xmlrpc.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.4.0" />
+    </ItemGroup>
+
 </Project>
