--- a/iviz_msgs_gen/iviz_msgs_gen.csproj
+++ b/iviz_msgs_gen/iviz_msgs_gen.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Iviz.MsgsGen</AssemblyName>
     <RootNamespace>Iviz.MsgsGen</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -18,6 +19,7 @@
     <None Remove="Properties\PublishProfiles\FolderProfile 1.pubxml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
     <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
   </ItemGroup>
   <ItemGroup>
