--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -9,12 +9,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\biggustave\biggustave.csproj" />
         <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
         <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
         <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
         <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
         <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
         <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="BitMiracle.LibJpeg.NET" Version="1.5.324" />
     </ItemGroup>
 
     <Target DependsOnTargets="ResolveReferences" Name="CopyProjectReferencesToPackage">
