Adding plugin for macOS, needs testing to see if signing is OK

--- a/iviz/Assets/Plugins/MacOS/IvizOpencv.bundle/Contents/Info.plist
+++ b/iviz/Assets/Plugins/MacOS/IvizOpencv.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18G6032</string>
+	<string>20D74</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,21 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10A255</string>
+	<string>12D4e</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>11.1</string>
 	<key>DTSDKBuild</key>
-	<string>18A384</string>
+	<string>20C63</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx11.1</string>
 	<key>DTXcode</key>
-	<string>1000</string>
+	<string>1240</string>
 	<key>DTXcodeBuild</key>
-	<string>10A255</string>
+	<string>12D4e</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.15</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2021 Antonio Zea. All rights reserved.</string>
 </dict>
