--- a/iviz_utils_tests/iviz_utils_tests.csproj
+++ b/iviz_utils_tests/iviz_utils_tests.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <AssemblyName>Iviz.UtilsTests</AssemblyName>
+
+        <RootNamespace>Iviz.UtilsTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
+      <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
       <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
     </ItemGroup>
 
