--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -12,6 +12,7 @@
         <ProjectReference Include="..\biggustave\biggustave.csproj" />
         <ProjectReference Include="..\iviz_model_service_lib\iviz_model_service_lib.csproj" />
         <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
+        <ProjectReference Include="..\iviz_msgs_wrapper\iviz_msgs_wrapper.csproj" />
         <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
         <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
         <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
