--- a/iviz_utils_tests/iviz_utils_tests.csproj
+++ b/iviz_utils_tests/iviz_utils_tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\iviz_msgs_wrapper\iviz_msgs_wrapper.csproj" />
       <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
       <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
       <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
