--- a/iviz_tf_manager/iviz_tf_manager.csproj
+++ b/iviz_tf_manager/iviz_tf_manager.csproj
@@ -1,14 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Iviz.TfManager</AssemblyName>
         <RootNamespace>Iviz.TfManager</RootNamespace>
         <Nullable>enable</Nullable>
+        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
+      <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
     </ItemGroup>
 
 </Project>
