--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -15,6 +15,7 @@
         <ProjectReference Include="..\iviz_msgs_wrapper\iviz_msgs_wrapper.csproj" />
         <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
         <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
+        <ProjectReference Include="..\iviz_tf_manager\iviz_tf_manager.csproj" />
         <ProjectReference Include="..\iviz_urdf\iviz_urdf.csproj" />
         <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
     </ItemGroup>
