--- a/iviz_roslib/iviz_roslib.csproj
+++ b/iviz_roslib/iviz_roslib.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\iviz_dynamic_msg_lib\iviz_dynamic_msg_lib.csproj" />
     <ProjectReference Include="..\iviz_msgs\iviz_msgs.csproj" />
     <ProjectReference Include="..\iviz_msgs_gen_lib\iviz_msgs_gen_lib.csproj" />
+    <ProjectReference Include="..\iviz_rosbag_lib\iviz_rosbag_lib.csproj" />
     <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
   </ItemGroup>
   <ItemGroup>
