--- a/iviz_rosbag_lib/iviz_rosbag_lib.csproj
+++ b/iviz_rosbag_lib/iviz_rosbag_lib.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="System.Buffers" Version="4.5.1" />
       <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+      <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.4.0" />
     </ItemGroup>
 
     <ItemGroup>
