--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -1,18 +1,19 @@
 {
   "dependencies": {
-    "com.unity.burst": "1.4.4",
+    "com.unity.burst": "1.4.8",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.6",
-    "com.unity.ide.rider": "3.0.4",
+    "com.unity.ide.rider": "3.0.7",
     "com.unity.mathematics": "1.2.1",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.postprocessing": "3.0.1",
     "com.unity.test-framework": "1.1.22",
-    "com.unity.textmeshpro": "2.1.3",
+    "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.arcore": "4.1.5",
-    "com.unity.xr.arfoundation": "4.1.5",
-    "com.unity.xr.arkit": "4.1.5",
+    "com.unity.xr.arfoundation": "4.1.7",
+    "com.unity.xr.arkit": "4.1.7",
     "com.unity.xr.windowsmr.metro": "4.2.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -44,7 +45,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.nuget.newtonsoft-json": "2.0.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
