--- a/iviz_msgs/iviz_msgs.csproj
+++ b/iviz_msgs/iviz_msgs.csproj
@@ -17,7 +17,6 @@
     <DefineConstants>TRACE;ENABLE_PROFILER</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="System.Buffers" Version="4.5.1" />
+    <ProjectReference Include="..\iviz_tools\iviz_tools.csproj" />
   </ItemGroup>
 </Project>
