--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "com.unity.burst": "1.4.8",
-    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.collab-proxy": "1.10.2",
     "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.rider": "3.0.7",
+    "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.mathematics": "1.2.1",
     "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.postprocessing": "3.1.1",
-    "com.unity.test-framework": "1.1.22",
+    "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
