--- a/iviz_tools/iviz_tools.csproj
+++ b/iviz_tools/iviz_tools.csproj
@@ -4,7 +4,7 @@
         <AssemblyName>Iviz.Tools</AssemblyName>
         <RootNamespace>Iviz.Tools</RootNamespace>
         <Nullable>enable</Nullable>
-        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
 
