--- a/iviz_model_service_lib/iviz_model_service_lib.csproj
+++ b/iviz_model_service_lib/iviz_model_service_lib.csproj
@@ -4,7 +4,7 @@
         <AssemblyName>Iviz.ModelService.Lib</AssemblyName>
         <RootNamespace>Iviz.ModelService</RootNamespace>
         <LangVersion>9</LangVersion>
-        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
