--- a/iviz_dynamic_msg_lib/iviz_dynamic_msg_lib.csproj
+++ b/iviz_dynamic_msg_lib/iviz_dynamic_msg_lib.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>9</LangVersion>
-        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <AssemblyName>Iviz.MsgsGen.Dynamic.Lib</AssemblyName>
         <RootNamespace>Iviz.MsgsGen.Dynamic</RootNamespace>
