--- a/iviz_rosbag_lib/iviz_rosbag_lib.csproj
+++ b/iviz_rosbag_lib/iviz_rosbag_lib.csproj
@@ -4,7 +4,7 @@
         <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
         <RootNamespace>Iviz.Rosbag</RootNamespace>
-        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <AssemblyName>Iviz.Rosbag.Lib</AssemblyName>
     </PropertyGroup>
 
