--- a/iviz/Packages/manifest.json
+++ b/iviz/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.microsoft.mixedreality.openxr": "file:MixedReality/com.microsoft.mixedreality.openxr-1.1.2.tgz",
     "com.unity.burst": "1.6.0",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ext.nunit": "1.0.6",
@@ -16,6 +17,7 @@
     "com.unity.xr.arfoundation": "4.2.0",
     "com.unity.xr.arkit": "4.2.0",
     "com.unity.xr.interaction.toolkit": "1.0.0-pre.8",
+    "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.xr.openxr": "1.2.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -47,7 +49,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.microsoft.mixedreality.openxr": "file:MixedReality/com.microsoft.mixedreality.openxr-1.1.2.tgz"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
