--- a/iviz_octree_helper/iviz_octree_helper.csproj
+++ b/iviz_octree_helper/iviz_octree_helper.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>9</LangVersion>
         <AssemblyName>Iviz.Octree</AssemblyName>
