--- a/ros_msgs/iviz_msgs/package.xml
+++ b/ros_msgs/iviz_msgs/package.xml
@@ -9,7 +9,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
- <build_depend>message_generation</build_depend>
+  <build_depend>message_generation</build_depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+
   <exec_depend>message_runtime</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
