--- a/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
+++ b/iviz_rosmaster_lib/iviz_rosmaster_lib.csproj
@@ -4,7 +4,7 @@
         <AssemblyName>Iviz.Rosmaster.Lib</AssemblyName>
         <RootNamespace>Iviz.Rosmaster</RootNamespace>
         <LangVersion>9</LangVersion>
-        <TargetFrameworks>net5.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
