--- a/iviz_utils_tests/iviz_utils_tests.csproj
+++ b/iviz_utils_tests/iviz_utils_tests.csproj
@@ -8,6 +8,10 @@
         <AssemblyName>Iviz.UtilsTests</AssemblyName>
 
         <RootNamespace>Iviz.UtilsTests</RootNamespace>
+
+        <OutputType>Library</OutputType>
+
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
