--- a/iviz_rosbag_lib/iviz_rosbag_lib.csproj
+++ b/iviz_rosbag_lib/iviz_rosbag_lib.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <LangVersion>9</LangVersion>
+        <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
         <RootNamespace>Iviz.Rosbag</RootNamespace>
-        <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
         <AssemblyName>Iviz.Rosbag.Lib</AssemblyName>
     </PropertyGroup>
 
