Continuing work on vnc

--- a/iviz/Assets/VNC/VNC.asmdef
+++ b/iviz/Assets/VNC/VNC.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:31a80e3fb3ac64b8385cd739784d42de",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:bb05cab7d802aa5468f8f2f86840d984"
+        "GUID:8fcae4bc21c4646db87e41dd8bdaa097",
+        "GUID:ac7ae464766a74b6596529fe63a3379c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
