Adding throwers, updating refs

--- a/iviz_model_service_lib/iviz_model_service_lib.csproj
+++ b/iviz_model_service_lib/iviz_model_service_lib.csproj
@@ -5,6 +5,7 @@
         <RootNamespace>Iviz.ModelService</RootNamespace>
         <LangVersion>default</LangVersion>
         <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+        <IsTrimmable>true</IsTrimmable>
     </PropertyGroup>
 
     <ItemGroup>
