Trying out using direct decompressors instead of C# libs

--- a/iviz/Assets/ImageWrappers/Iviz.ImageWrappers.asmdef
+++ b/iviz/Assets/ImageWrappers/Iviz.ImageWrappers.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "Iviz.MarkerDetection",
+    "name": "Iviz.ImageWrappers",
     "rootNamespace": "",
-    "references": [
-        "GUID:31a80e3fb3ac64b8385cd739784d42de"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
